Fixed show password eye icon showing tiny text behind for long pws Updated app version

--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -169,10 +169,11 @@
 
 .eye-icon {
   position: absolute;
-  top: 8px;
+  top: 0;
   left: 8px;
   cursor: pointer;
   background-color: #ececec;
+  height: 100%;
 }
 
 .eye-icon path {
